Ajustar transparencias tarjetas y orden logo en Index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 
     <main>
         <div class="main-container-index">
-            <div class="main-section-destacados" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin-top: 40px; margin-bottom: 30px;">
+            <div class="main-section-index" style="margin-bottom: 4px;">
+                <img src="/images/logo_vinilo_blanco_transparente.png" class="logo-inicio">
+            </div>
+            <div class="main-section-destacados" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin-top: 4px; margin-bottom: 30px;">
                 <div class="main-section-offers">
                     <a href="ofertas.html"><img src="images/cocteles/coctel_mojito2.JPG" alt="Oferta Mojito 2x1"></a>
                     <h2>Mojitos 2x1</h2>
@@ -48,10 +51,6 @@
                     <a href="programacion.html" class="btn-destacado">Ver programación</a>
                 </div>
             </div>
-            <div class="main-section-index">
-                <img src="/images/logo_vinilo_blanco_transparente.png" class="logo-inicio">
-            </div>
-
             <div class="main-section-index-rrss">
                 <a href="https://www.instagram.com/vinilo_2.0/" target="_blank">
                     <img src="/images/instagram_logo_transparente.png">
