Ajustar disposicion tarjetas en OFERTAS

--- a/ofertas.html
+++ b/ofertas.html
@@ -44,6 +44,13 @@
                 <p>Disfruta de tu cerveza ERDINGER de 50cl en una jarra helada por</p><h1>2,5€</h1>
                 <p>*Hasta agotar existencias</p>
             </div>
+            <div class="main-section-offers">
+                <img src="/images/cocteles/coctel_piña_colada.JPG">
+                <h3>Piña Colada Especial</h3>
+                <p>¡Refresca tu verano con nuestra Piña Colada tropical!</p>
+                <h1>4,5€</h1>
+                <p>*Solo durante el mes de agosto.</p>
+            </div>
         </div>
     </main>
     <footer class="footer">
