feat: mejora diseño responsive y tarjetas del index

--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
             <div class="main-section-index" style="margin-bottom: 4px;">
                 <img src="/images/logo_vinilo_blanco_transparente.png" class="logo-inicio">
             </div>
-            <div class="main-section-destacados" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin-top: 4px; margin-bottom: 30px;">
-                <div class="main-section-offers">
+            <div class="main-section-inicio">
+                <div class="main-section-offers oferta-inicio">
                     <a href="ofertas.html"><img src="images/cocteles/coctel_mojito2.JPG" alt="Oferta Mojito 2x1"></a>
                     <h2>Mojitos 2x1</h2>
                     <p>¡Disfruta de nuestra oferta especial de mojitos 2x1 todos los jueves!</p>
-                    <a href="ofertas.html" class="btn-destacado">Ver más ofertas</a>
+                    <a href="ofertas.html" class="btn-destacado btn-cocteles">Ver más ofertas</a>
                 </div>
-                <div class="main-section-events">
+                <div class="main-section-events programacion-inicio">
                     <a href="programacion.html"><img src="images/eventos/luiskill_21-2.jpeg" alt="Próxima programación"></a>
                     <h2>Próximo evento</h2>
                     <p>Este viernes: DJ Luiskill en directo. ¡No te lo pierdas!</p>
-                    <a href="programacion.html" class="btn-destacado">Ver programación</a>
+                    <a href="programacion.html" class="btn-destacado btn-cocteles">Ver programación</a>
                 </div>
+            </div>
+            <div style="display: flex; justify-content: center; margin-bottom: 24px;">
+                <a href="cocteles.html" class="btn-destacado btn-cocteles">Ver carta de cócteles</a>
             </div>
             <div class="main-section-index-rrss">
                 <a href="https://www.instagram.com/vinilo_2.0/" target="_blank">
