fix: arreglar diseño tarjetas en version movil de ofertas y programacion

--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
             </div>
             <div class="main-section-inicio">
                 <div class="main-section-offers oferta-inicio">
-                    <a href="ofertas.html"><img src="images/cocteles/coctel_mojito2.JPG" alt="Oferta Mojito 2x1"></a>
-                    <h2>Mojitos 2x1</h2>
-                    <p>¡Disfruta de nuestra oferta especial de mojitos 2x1 todos los jueves!</p>
-                    <a href="ofertas.html" class="btn-destacado btn-cocteles">Ver más ofertas</a>
+                    <div class="oferta-img-container">
+                        <a href="ofertas.html"><img src="images/cocteles/coctel_mojito2.JPG" alt="Oferta Mojito 2x1"></a>
+                    </div>
+                    <div class="oferta-texto-container">
+                        <h2>Mojitos 2x1</h2>
+                        <p>¡Disfruta de nuestra oferta especial de mojitos 2x1 todos los jueves!</p>
+                        <a href="ofertas.html" class="btn-destacado btn-cocteles">Ver más ofertas</a>
+                    </div>
                 </div>
                 <div class="main-section-events programacion-inicio">
                     <a href="programacion.html"><img src="images/eventos/luiskill_21-2.jpeg" alt="Próxima programación"></a>
