chore: cambio programacion en inicio y borrado de imagenes obsolestas

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 <img src="/images/logo_vinilo_blanco_transparente.png" class="logo-inicio">
             </div>
             <div class="main-section-inicio">
+                <div class="main-section-events programacion-inicio">
+                    <a href="programacion.html"><img src="images/eventos/fiesta schwepes post.jpeg" alt="Próxima programación"></a>
+                    <h2></h2>
+                    <p></p>
+                    <a href="programacion.html" class="btn-destacado btn-cocteles">Ver programación</a>
+                </div>
                 <div class="main-section-offers oferta-inicio">
                     <div class="oferta-img-container">
                         <a href="ofertas.html"><img src="images/cocteles/coctel_mojito2.JPG" alt="Oferta Mojito 2x1"></a>
@@ -47,12 +53,6 @@
                         <p>¡Disfruta de nuestra oferta especial de mojitos 2x1 todos los jueves!</p>
                         <a href="ofertas.html" class="btn-destacado btn-cocteles">Ver más ofertas</a>
                     </div>
-                </div>
-                <div class="main-section-events programacion-inicio">
-                    <a href="programacion.html"><img src="images/eventos/luiskill_21-2.jpeg" alt="Próxima programación"></a>
-                    <h2>Próximo evento</h2>
-                    <p>Este viernes: DJ Luiskill en directo. ¡No te lo pierdas!</p>
-                    <a href="programacion.html" class="btn-destacado btn-cocteles">Ver programación</a>
                 </div>
             </div>
             <div style="display: flex; justify-content: center; margin-bottom: 24px;">
