chore: añadir evento a programacion

--- a/programacion.html
+++ b/programacion.html
@@ -32,6 +32,9 @@
     <main>
         <div class="main-container">
             <div class="main-section-events">
+                <img src="/images/eventos/fiesta schwepes post.jpeg">
+            </div>
+            <div class="main-section-events">
                 <img src="/images/eventos/horario_romeria.jpeg">
             </div>
             <div class="main-section-events">
