chore: cambio ofertas en index y ofertas

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 </div>
                 <div class="main-section-offers oferta-inicio">
                     <div class="oferta-img-container">
-                        <a href="ofertas.html"><img src="images/cocteles/coctel_mojito2.JPG" alt="Oferta Mojito 2x1"></a>
+                        <a href="ofertas.html"><img src="images/ofertas/oferta_estrella_post.jpeg" alt="Oferta Mojito 2x1"></a>
                     </div>
                     <div class="oferta-texto-container">
-                        <h2>Mojitos 2x1</h2>
-                        <p>¡Disfruta de nuestra oferta especial de mojitos 2x1 todos los jueves!</p>
+                        <h2</h2>
+                        <p></p>
                         <a href="ofertas.html" class="btn-destacado btn-cocteles">Ver más ofertas</a>
                     </div>
                 </div>
