--- a/ofertas.html
+++ b/ofertas.html
@@ -32,24 +32,11 @@
     <main>
         <div class="main-container">
             <div class="main-section-offers">
-                <img src="/images/cocteles/coctel_mojito2.JPG">
-                <h3>Mojitos 2x1</h3>
-                <p>¡Disfruta de nuestra oferta especial de mojitos 2x1 todos los jueves!</p>
-                <h1>2x1</h1>
-                <p>*Oferta válida los jueves. Pregunta en barra por más detalles.</p>
-            </div>
-            <div class="main-section-offers">
-                <img src="/images/ofertas/erdinger_1.jpg">
-                <h3>Cerveza ERDINGER OKTOBERFEST 50cl</h3>
-                <p>Disfruta de tu cerveza ERDINGER de 50cl en una jarra helada por</p><h1>2,5€</h1>
-                <p>*Hasta agotar existencias</p>
-            </div>
-            <div class="main-section-offers">
-                <img src="/images/cocteles/coctel_piña_colada.JPG">
-                <h3>Piña Colada Especial</h3>
-                <p>¡Refresca tu verano con nuestra Piña Colada tropical!</p>
-                <h1>4,5€</h1>
-                <p>*Solo durante el mes de agosto.</p>
+                <img src="/images/ofertas/oferta_estrella_history.jpeg">
+                <h3</h3>
+                <p></p>
+                <h1></h1>
+                <p></p>
             </div>
         </div>
     </main>
